Configuration for AWS testing